// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalBanner Matches snapshot (desktop) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c6:hover {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c6:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c8:hover {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c8:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c3 {
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFB302;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  line-height: 1.5rem;
  padding: var(--spacing-1x) var(--spacing-2x);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 span {
  margin: 0;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
}

.c7 {
  border-color: #000000;
  color: #000000;
}

.c7:hover {
  border-color: #ffdd99;
  color: #ffdd99;
}

.c9 {
  color: #000000;
}

.c9:hover {
  background-color: #a36d00;
}

.c4 {
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c4 * + * {
  margin-left: var(--spacing-1x);
}

<div
  class="c0"
  data-testid="container"
  role="alert"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
    <span>
      <b
        class="c3"
      >
        Test
      </b>
      WARNING! Lorem ipsum
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      type="submit"
    >
      Default
    </button>
    <button
      class="c5 c8 c9"
      data-testid="ignore-button"
      type="submit"
    >
      Ignorer
    </button>
  </div>
</div>
`;

exports[`GlobalBanner Matches snapshot (mobile) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 48px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c6:hover {
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6:disabled {
  border-color: #003A5A;
  color: #003A5A;
}

.c6:focus {
  background-color: #012639;
  border-color: #006296 color:#FFFFFF;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c8:hover {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c8:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c8:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c3 {
  font-weight: var(--font-normal);
  margin-right: var(--spacing-1x);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.46px;
  -moz-letter-spacing: 0.46px;
  -ms-letter-spacing: 0.46px;
  letter-spacing: 0.46px;
  line-height: 1.5rem;
  padding: var(--spacing-3x) var(--spacing-2x);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 span {
  margin: 0;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: var(--spacing-1x);
}

.c7:hover {
  border-color: #f99d99;
  color: #f99d99;
}

.c9:hover {
  background-color: #7b1a15;
}

.c4 {
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c4 * + * {
  margin-left: var(--spacing-1x);
}

<div
  class="c0"
  data-testid="container"
  role="alert"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="c2"
      color="currentColor"
      focusable="false"
      height="24"
      width="24"
    />
    <span>
      <b
        class="c3"
      >
        Test
      </b>
      ERROR! Lorem ipsum
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      type="submit"
    >
      Default
    </button>
    <button
      class="c5 c8 c9"
      data-testid="ignore-button"
      type="submit"
    >
      Ignorer
    </button>
  </div>
</div>
`;
